--- a/res/layout/sound_manager_layout.xml
+++ b/res/layout/sound_manager_layout.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:trackview="http://schemas.android.com/apk/res/net.ednovak.swiftalk"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,9 +10,8 @@
         android:id="@+id/rec_new"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="2dp"
         android:textOff="Record"
+		android:layout_centerHorizontal="true"
         android:textOn="Stop Recording"
         android:onClick="newRecording" />
         
@@ -21,6 +21,12 @@
         android:background="#f1f1f1"
         android:layout_width="match_parent"
     	android:layout_height="match_parent">
+<!-- 
+        <net.ednovak.swiftalk.TrackView
+            android:id="@+id/trackviewtest"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            trackview:track_number="1" /> -->
         
     </LinearLayout>
     
