--- a/res/anim/blink.xml
+++ b/res/anim/blink.xml
@@ -4,21 +4,9 @@
     
     <alpha
         android:fromAlpha="1.0" 
-        android:toAlpha="0.5"
-        android:duration="25"
+        android:toAlpha="0.0"
+        android:duration="500"
         android:repeatMode="reverse"
-        android:repeatCount="1" />
-    
-    <scale
-        android:fromXScale="1.0"
-        android:toXScale="0.95"
-        android:fromYScale="1.0"
-        android:toYScale="0.95"
-        android:duration="25"
-        android:pivotX="50%"
-      	android:pivotY="50%"
-        android:repeatMode="reverse"
-        android:repeatCount="1"/>
-    
+        android:repeatCount="infinite" />
     
 </set>
