--- a/res/layout/sound_manager_layout.xml
+++ b/res/layout/sound_manager_layout.xml
@@ -4,6 +4,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffff"
     tools:context="net.ednovak.swiftalk.SoundManager" >
     
     <ToggleButton
@@ -14,11 +15,19 @@
 		android:layout_centerHorizontal="true"
         android:textOn="Stop Recording"
         android:onClick="newRecording" />
+    
+    <ImageView
+        android:id="@+id/rec_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+       	android:layout_alignParentRight="true"
+       	android:layout_margin="2dp"
+        android:visibility="invisible"
+        android:src="@drawable/circle_red" />
         
     <LinearLayout android:id="@+id/linlay"
         android:orientation="vertical"
         android:layout_below="@id/rec_new"
-        android:background="#f1f1f1"
         android:layout_width="match_parent"
     	android:layout_height="match_parent">
 <!-- 
