--- a/res/layout/sound_manager_layout.xml
+++ b/res/layout/sound_manager_layout.xml
@@ -1,6 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:trackview="http://schemas.android.com/apk/res/net.ednovak.swiftalk"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -16,6 +17,12 @@
         android:textOn="Stop Recording"
         android:onClick="newRecording" />
     
+    <View android:id="@+id/rule"
+    	android:layout_width="fill_parent"
+		android:layout_height="2dip"
+		android:layout_below="@id/rec_new"
+		android:background="#000000" />
+    
     <ImageView
         android:id="@+id/rec_image"
         android:layout_width="wrap_content"
@@ -27,17 +34,30 @@
         
     <LinearLayout android:id="@+id/linlay"
         android:orientation="vertical"
-        android:layout_below="@id/rec_new"
+        android:layout_below="@id/rule"
         android:layout_width="match_parent"
-    	android:layout_height="match_parent">
+    	android:layout_height="wrap_content" />
+    
+    <LinearLayout android:id="@+id/adlinlay"
+        android:orientation="vertical"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+    	android:layout_height="wrap_content">
+    	
+        <com.google.android.gms.ads.AdView android:id="@+id/adView"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         ads:adUnitId="ca-app-pub-7566164580140208/9216095975"
+                         ads:adSize="BANNER"/>
+        
+  	</LinearLayout>
+
 <!-- 
         <net.ednovak.swiftalk.TrackView
             android:id="@+id/trackviewtest"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             trackview:track_number="1" /> -->
-        
-    </LinearLayout>
     
     
     
